common-lisp-controller (3.61) unstable; urgency=low

  * Fix off by one error in beneath-source-root

 -- Kevin M. Rosenberg <kmr@debian.org>  Thu, 24 Apr 2003 22:20:00 -0600

common-lisp-controller (3.60) unstable; urgency=low

  * register-common-lisp-implementation: Rebuild .asd-based packages
  are rebuilt as well as .system packages.

 -- Kevin M. Rosenberg <kmr@debian.org>  Sat, 12 Apr 2003 12:09:59 -0600

common-lisp-controller (3.59) unstable; urgency=low

  * Added a conflict with xinetd. Not the best solution I know.
  * Removed debhelper version statement from debian/rules 

 -- Peter Van Eynde <pvaneynd@debian.org>  Tue,  8 Apr 2003 18:39:19 +0200

common-lisp-controller (3.58) unstable; urgency=low

  * Use :: instead of : when testing for presence of
    sb-ext::*module-provider-functions* (closes:186059)

 -- Kevin M. Rosenberg <kmr@debian.org>  Mon, 24 Mar 2003 09:45:36 -0700

common-lisp-controller (3.57) unstable; urgency=low

  * Improved error reporting script :-(
  * Added Pre-depends on netkit-inetd as this seems to be the 
    cause of the build-failures...

 -- Peter <pvaneynd@debian.org>  Tue,  4 Mar 2003 21:56:59 +0100

common-lisp-controller (3.56) unstable; urgency=low

  * Rename remove-defsystem to remove-clc, install-defsystem to
    install-clc

 -- Kevin M. Rosenberg <kmr@debian.org>  Tue,  4 Mar 2003 21:52:57 -0700

common-lisp-controller (3.55) unstable; urgency=low

  * Add ~/.sbcl/systems/ to asdf:*central-registry*
  * Have asdf:*central-registry* processing evaluate each entry

 -- Kevin M. Rosenberg <kmr@debian.org>  Mon,  3 Mar 2003 15:12:55 -0700

common-lisp-controller (3.54) unstable; urgency=low

  * Add support for SBCL's REQUIRE/contrib directories integration

 -- Kevin M. Rosenberg <kmr@debian.org>  Mon,  3 Mar 2003 12:14:57 -0700

common-lisp-controller (3.53) unstable; urgency=low

  * Work-around mk-defsystem's override of CL:REQUIRE for SBCL
